--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,6 @@
 </head>
 <body>
     <main id="mainEle"></main>
-    <script type="module" src="main.js"></script>
+    <script type="module" src="main.min.js"></script>
 </body>
 </html>
