--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
     
     <title>Terminal</title>
 
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="/statc/main.css">
 </head>
 <body>
     <main id="mainEle"></main>
-    <script type="module" src="main.min.js"></script>
+    <script type="module" src="/statc/main.min.js"></script>
 </body>
 </html>
