--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     
     <title>Terminal</title>
 
-    <script type="module" src="/statc/terminal.min.js"></script>
+    <script type="module" src="/terminal.min.js"></script>
 
     <script>
         function fetchModule(path) {
